# AgentFlow

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  LICENSE  README.md  STATUS.json  TUTORIAL.md  autonomous_agent_team_design (2).odt  deny.toml  docker-compose.yml  litellm_config.yaml  segment-1-eval.md
.agent/: registry.json
.agent/agents/: forge.agent.md  lore.agent.md  nexus.agent.md
.agent/standards/: CODING.md  REVIEW.md  SECURITY.md
.github/workflows/: cargo_deny.yml  semver_checks.yml
.kilo/plans/: 1776824021690-cosmic-garden.md  1776973869782-misty-canyon.md  1776975814312-witty-circuit.md  1777039584445-calm-rocket.md  litellm-proxy-routing.md
.sprintless/plugin/: plugin.json
.sprintless/plugin/commands/: handoff.md  plan.md  segment-done.md  status.md
.sprintless/plugin/hooks/forge/: post_write_lint.sh  pre_write_check.sh  session_start.sh  stop_require_artifact.sh
.sprintless/plugin/mcp/: mcp.json.template
.sprintless/plugin/skills/: forge-coding.md  forge-planning.md  sentinel-criteria.md  sentinel-review.md
binary/: Cargo.toml
binary/src/: main.rs  state.rs
binary/src/nodes/: forge.rs  mod.rs  nexus.rs
binary/tests/: nexus_e2e.rs  nexus_real_e2e.rs
crates/agent-client/: Cargo.toml
crates/agent-client/src/: anthropic.rs  fallback.rs  fireworks.rs  gemini.rs  lib.rs  mcp.rs  openai.rs  runner.rs  types.rs
crates/agent-forge/: Cargo.toml
crates/agent-forge/src/: lib.rs
crates/agent-forge/tests/: concurrency_integration.rs  forge_claude_e2e.rs
crates/agent-lore/: Cargo.toml
crates/agent-lore/src/: adr.rs  changelog.rs  docs.rs  lib.rs  readme.rs  retrospective.rs  types.rs
crates/agent-nexus/: Cargo.toml
crates/agent-nexus/src/: lib.rs
crates/agent-nexus/tests/: dependency_chain.rs
crates/agent-sentinel/: Cargo.toml
crates/agent-sentinel/src/: lib.rs
crates/agent-vessel/: Cargo.toml
crates/agent-vessel/src/: ci_poller.rs  conflict_resolver.rs  lib.rs  merger.rs  node.rs  notifier.rs  types.rs
crates/anthropic-mock/: Cargo.toml
crates/anthropic-mock/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: agent.rs  lib.rs  registry.rs  state.rs  ticket.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  lib.rs  rest.rs  schemas.rs
crates/pair-harness/: Cargo.toml  README.md
crates/pair-harness/src/: artifacts.rs  isolation.rs  lib.rs  mcp_config.rs  memory_locks.rs  pair.rs  process.rs  provision.rs  reset.rs  types.rs  watchdog.rs  watcher.rs  workspace.rs  worktree.rs
crates/pair-harness/tests/: full_e2e.rs  pair_real_e2e.rs  proxy_routing.rs
crates/pocketflow-core/: Cargo.toml
crates/pocketflow-core/src/: action.rs  batch.rs  command_gate.rs  flow.rs  lib.rs  node.rs  store.rs  types.rs
docs/: demo.md  forge-pair-integration.md  forge-sentinel-arch.md  nexus-issue-sync.md  setup-claude-cli.md  validation-contract.md
docs/architecture/: system-behavior.md
examples/: test_status_parse.rs
orchestration/agent/: registry.json
orchestration/agent/agents/: forge.agent.md  nexus.agent.md  sentinel.agent.md  vessel.agent.md
orchestration/agent/standards/: CODING.md  REVIEW.md  SECURITY.md
orchestration/plugin/: plugin.json
orchestration/plugin/commands/: assign.md  check-ci.md  document-pr.md  gate-approve.md  handoff.md  merge.md  segment-done.md  status-check.md  status.md
orchestration/plugin/hooks/forge/: post_write_lint.sh  pre_bash_guard.sh  pre_compact_handoff.sh  pre_write_check.sh  stop_require_artifact.sh
orchestration/plugin/hooks/lore/: session-start.sh
orchestration/plugin/hooks/sentinel/: post_write_validate.sh  (+3 more)
orchestration/plugin/mcp/: mcp.json.template
orchestration/plugin/skills/: forge-algorithmic-art.md  forge-canvas-design.md  forge-coding.md  forge-frontend-design.md  forge-mcp-builder.md  forge-planning.md  forge-skill-creator.md  forge-web-artifacts-builder.md  lore-brand-guidelines.md  lore-changelog.md  lore-doc-coauthoring.md  lore-documentation.md  lore-docx.md  lore-pdf.md  lore-pptx.md  lore-theme-factory.md  lore-xlsx.md  nexus-doc-coauthoring.md  nexus-internal-comms.md  nexus-orchestration.md  nexus-skill-creator.md  nexus-slack-gif-creator.md  nexus-triage.md  nexus-xlsx.md  sentinel-algorithmic-art.md  sentinel-criteria.md  sentinel-frontend-design.md  sentinel-review.md  sentinel-web-artifacts-builder.md  sentinel-webapp-testing.md  shared-claude-api.md  vessel-ci-gate.md  vessel-internal-comms.md  vessel-mcp-builder.md  vessel-merge-protocol.md  vessel-pdf.md
plugins/: README.md  test-plugins.sh
plugins/forge/: .mcp.json
plugins/forge/.claude-plugin/: plugin.json
plugins/forge/agents/: forge.md
plugins/forge/commands/: plan.md
plugins/forge/hooks/: hooks.json
plugins/forge/scripts/: post-write-lint.sh  pre-bash-guard.sh  pre-compact-handoff.sh  session-start.sh  stop-require-artifact.sh
plugins/lore/: .mcp.json
plugins/lore/.claude-plugin/: plugin.json
plugins/lore/agents/: lore.md
plugins/lore/commands/: update-changelog.md
plugins/nexus/: .mcp.json
plugins/nexus/.claude-plugin/: plugin.json
plugins/nexus/agents/: nexus.md
plugins/nexus/hooks/: hooks.json
plugins/nexus/scripts/: init-session.sh  log-decision.sh
plugins/sentinel/: .mcp.json
plugins/sentinel/.claude-plugin/: plugin.json
plugins/sentinel/agents/: sentinel.md
plugins/sentinel/commands/: approve-segment.md  final-review.md
plugins/sentinel/hooks/: hooks.json
plugins/sentinel/scripts/: post-write-validate.sh  pre-bash-readonly.sh  session-start.sh  stop-require-eval.sh
plugins/vessel/: .mcp.json
plugins/vessel/.claude-plugin/: plugin.json
plugins/vessel/agents/: vessel.md
plugins/vessel/hooks/: hooks.json
scripts/: check_setup.sh  mcp_mock.py  mock_claude.py  start_proxy.sh
sprintless/agent/agents/: forge.agent.md
sprintless/agent/standards/: CODING.md  REVIEW.md
sprintless/plugin/mcp/: mcp.json.template
sprintless/plugin/skills/: forge-coding.md  forge-planning.md  sentinel-criteria.md  sentinel-review.md
tests/e2e/: full_flow.sh  registry.json  smoketest.json
(+7 files in other folders)
