[package]
name = "agent-nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
agent-client = { path = "../agent-client" }
config = { path = "../config" }
github = { path = "../github" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
