[package]
name    = "github"
version = "0.1.0"
edition = "2021"

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
tracing     = { workspace = true }
