[package]
name    = "github"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true, features = ["full"] }
tracing       = { workspace = true }
reqwest       = { workspace = true }
regex         = "1"
rand          = { workspace = true }
pocketflow-core = { path = "../pocketflow-core" }
