[package]
name = "pair-harness"
version = "0.1.0"
edition = "2021"
description = "Event-driven harness for FORGE-SENTINEL pair lifecycle management"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
notify = "6.1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
which = "7"
config = { path = "../config" }

[dev-dependencies]
tempfile = "3"