[package]
name    = "pocketflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
fred        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
